--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Hello, Docker!</h1>
     <p>このページが無事表示されていればOKです！</p>
-    <p>S3デプロイテスト ver2.3</p>
+    <p>S3デプロイテスト ver3.0</p>
+    <p>手動承認後にprodにデプロイするようにSNSトピック追加</p>
 </body>
 </html>
